--- a/Creating hyperlinks/projects/index.html
+++ b/Creating hyperlinks/projects/index.html
@@ -8,6 +8,8 @@
 
 <body>
     <h1>This is my project page</h1>
+
+    <p>A link to my <a href="../pdfs/project-brief.pdf">project brief</a>.</p>
 </body>
 
 </html>
