--- a/Styling tables/index.html
+++ b/Styling tables/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typical HTML Table</title>
+    <title>UK punk bands</title>
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -32,9 +34,36 @@
                 <td>6</td>
                 <td>London Calling</td>
             </tr>
-
-            ... some rows removed for brevity
-
+            <tr>
+                <th scope="row">The Damned</th>
+                <td>1976</td>
+                <td>10</td>
+                <td>Smash it up</td>
+            </tr>
+            <tr>
+                <th scope="row">Sex Pistols</th>
+                <td>1975</td>
+                <td>1</td>
+                <td>Anarchy in the UK</td>
+            </tr>
+            <tr>
+                <th scope="row">Sham 69</th>
+                <td>1976</td>
+                <td>13</td>
+                <td>If The Kids Are United</td>
+            </tr>
+            <tr>
+                <th scope="row">Siouxsie and the Banshees</th>
+                <td>1976</td>
+                <td>11</td>
+                <td>Hong Kong Garden</td>
+            </tr>
+            <tr>
+                <th scope="row">Stiff Little Fingers</th>
+                <td>1977</td>
+                <td>10</td>
+                <td>Suspect Device</td>
+            </tr>
             <tr>
                 <th scope="row">The Stranglers</th>
                 <td>1974</td>
@@ -50,5 +79,3 @@
         </tfoot>
     </table>
 </body>
-
-</html>
